[package]
name = "arch-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
bytes = "1.9.0"
flate2 = "1.0.35"
hyper = { version = "1.5.2", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
tar = "0.4.43"
tokio = {version = "1.43", features = ["full"]}
xz2 = "0.1.7"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures-core = "0.3.31"
pin-project-lite = "0.2.16"
tokio-util =  { version = "0.7.13", features = ["io"] }
futures-util = "0.3"
http-body = "1.0.1"
http = "1.2.0"
